Loaded into eclipse and compiled (minor stateful changes made to eclipse meta-data
git-svn-id: file:///home/vsekhar/vgp/vgp@30 cb3134f3-094e-0410-9174-ff1f5a1024ca

--- a/trunk/.settings/org.eclipse.cdt.core.prefs
+++ b/trunk/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,4 @@
-#Thu Aug 09 23:19:00 EDT 2007
+#Sun May 25 22:02:18 IST 2008
 eclipse.preferences.version=1
 indexer/indexerId=org.eclipse.cdt.core.nullindexer
 indexerId=org.eclipse.cdt.core.nullindexer
