--- a/trunk/.cproject
+++ b/trunk/.cproject
@@ -34,8 +34,9 @@
 <option id="gnu.cpp.compiler.option.preprocessor.def.464985780" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def"/>
 <option id="gnu.cpp.compiler.option.preprocessor.undef.1415129087" name="Undefined symbols (-U)" superClass="gnu.cpp.compiler.option.preprocessor.undef"/>
 <option id="gnu.cpp.compiler.option.include.paths.541625890" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp"/>
-<listOptionValue builtIn="false" value="/home/vsekhar/boost-1.35.0/include/boost-1_35"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\gcc-4.3.0\include\c++\4.3.0&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\boost-1.35.0\include\boost-1_35&quot;"/>
 </option>
 <option id="gnu.cpp.compiler.option.optimization.flags.1450517575" name="Other optimization flags" superClass="gnu.cpp.compiler.option.optimization.flags"/>
 <option id="gnu.cpp.compiler.option.debugging.other.158326175" name="Other debugging flags" superClass="gnu.cpp.compiler.option.debugging.other"/>
@@ -59,8 +60,9 @@
 <option id="gnu.c.compiler.option.preprocessor.def.symbols.1896038353" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols"/>
 <option id="gnu.c.compiler.option.preprocessor.undef.symbol.1525506987" name="Undefined symbols (-U)" superClass="gnu.c.compiler.option.preprocessor.undef.symbol"/>
 <option id="gnu.c.compiler.option.include.paths.2115064357" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp"/>
-<listOptionValue builtIn="false" value="/home/vsekhar/boost-1.35.0/include/boost-1_35"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\gcc-4.3.0\include\c++\4.3.0&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\boost-1.35.0\include\boost-1_35&quot;"/>
 </option>
 <option id="gnu.c.compiler.option.optimization.flags.1094416728" name="Other optimization flags" superClass="gnu.c.compiler.option.optimization.flags"/>
 <option id="gnu.c.compiler.option.debugging.other.840805085" name="Other debugging flags" superClass="gnu.c.compiler.option.debugging.other"/>
@@ -82,7 +84,11 @@
 </tool>
 <tool id="cdt.managedbuild.tool.gnu.assembler.cygwin.lib.release.1607803681" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.cygwin.lib.release">
 <option id="gnu.both.asm.option.flags.993767612" name="Assembler flags" superClass="gnu.both.asm.option.flags"/>
-<option id="gnu.both.asm.option.include.paths.490562317" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths"/>
+<option id="gnu.both.asm.option.include.paths.490562317" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\gcc-4.3.0\include\c++\4.3.0&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\boost-1.35.0\include\boost-1_35&quot;"/>
+</option>
 <option id="gnu.both.asm.option.warnings.nowarn.1271897371" name="Suppress warnings (-W)" superClass="gnu.both.asm.option.warnings.nowarn"/>
 <option id="gnu.both.asm.option.version.1493265615" name="Announce version (-v)" superClass="gnu.both.asm.option.version"/>
 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.1150502999" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
@@ -1016,6 +1022,7 @@
 </profile>
 </scannerConfigBuildInfo>
 </storageModule>
+<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cconfiguration>
 <cconfiguration id="cdt.managedbuild.config.gnu.cygwin.lib.debug.1566321025">
 <storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.gnu.cygwin.lib.debug.1566321025" moduleId="org.eclipse.cdt.core.settings" name="Debug">
@@ -1040,7 +1047,11 @@
 <builder autoBuildTarget="all" buildPath="${workspace_loc:/vgp/Debug}" cleanBuildTarget="clean" enableAutoBuild="false" enableCleanBuild="true" enabledIncrementalBuild="true" id="cdt.managedbuild.target.gnu.builder.cygwin.lib.debug.1967559212" incrementalBuildTarget="all" keepEnvironmentInBuildfile="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.cygwin.lib.debug"/>
 <tool id="cdt.managedbuild.tool.gnu.assembler.cygwin.lib.debug.2038845289" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.cygwin.lib.debug">
 <option id="gnu.both.asm.option.flags.31749059" name="Assembler flags" superClass="gnu.both.asm.option.flags"/>
-<option id="gnu.both.asm.option.include.paths.1193231856" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths"/>
+<option id="gnu.both.asm.option.include.paths.1193231856" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\gcc-4.3.0\include\c++\4.3.0&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\boost-1.35.0\include\boost-1_35&quot;"/>
+</option>
 <option id="gnu.both.asm.option.warnings.nowarn.2113175733" name="Suppress warnings (-W)" superClass="gnu.both.asm.option.warnings.nowarn"/>
 <option id="gnu.both.asm.option.version.1824739936" name="Announce version (-v)" superClass="gnu.both.asm.option.version"/>
 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.937219811" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
@@ -1059,8 +1070,9 @@
 </option>
 <option id="gnu.cpp.compiler.option.preprocessor.undef.7234496" name="Undefined symbols (-U)" superClass="gnu.cpp.compiler.option.preprocessor.undef"/>
 <option id="gnu.cpp.compiler.option.include.paths.1565086639" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp"/>
-<listOptionValue builtIn="false" value="/home/vsekhar/boost-1.35.0/include/boost-1_35"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\gcc-4.3.0\include\c++\4.3.0&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\boost-1.35.0\include\boost-1_35&quot;"/>
 </option>
 <option id="gnu.cpp.compiler.option.optimization.flags.2056252723" name="Other optimization flags" superClass="gnu.cpp.compiler.option.optimization.flags"/>
 <option id="gnu.cpp.compiler.option.debugging.other.94109136" name="Other debugging flags" superClass="gnu.cpp.compiler.option.debugging.other"/>
@@ -1087,8 +1099,9 @@
 </option>
 <option id="gnu.c.compiler.option.preprocessor.undef.symbol.793642274" name="Undefined symbols (-U)" superClass="gnu.c.compiler.option.preprocessor.undef.symbol"/>
 <option id="gnu.c.compiler.option.include.paths.952897110" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp"/>
-<listOptionValue builtIn="false" value="/home/vsekhar/boost-1.35.0/include/boost-1_35"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\gcc-4.3.0\include\c++\4.3.0&quot;"/>
+<listOptionValue builtIn="false" value="&quot;C:\cygwin\home\vsekhar\boost-1.35.0\include\boost-1_35&quot;"/>
 </option>
 <option id="gnu.c.compiler.option.optimization.flags.973960364" name="Other optimization flags" superClass="gnu.c.compiler.option.optimization.flags"/>
 <option id="gnu.c.compiler.option.debugging.other.1519156798" name="Other debugging flags" superClass="gnu.c.compiler.option.debugging.other"/>
@@ -2052,6 +2065,7 @@
 </profile>
 </scannerConfigBuildInfo>
 </storageModule>
+<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cconfiguration>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
