Configured to play nice with linux and boost-1.36 when boost is installed in its default locations (/usr/local)
git-svn-id: file:///home/vsekhar/vgp/vgp@80 cb3134f3-094e-0410-9174-ff1f5a1024ca

--- a/trunk/.settings/org.eclipse.cdt.core.prefs
+++ b/trunk/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,4 @@
-#Sun May 25 22:42:32 IST 2008
+#Mon Sep 22 12:35:27 EDT 2008
 eclipse.preferences.version=1
 indexer/indexerId=org.eclipse.cdt.core.nullindexer
 indexerId=org.eclipse.cdt.core.nullindexer
