--- a/trunk/.cproject
+++ b/trunk/.cproject
@@ -29,8 +29,8 @@
 <tool id="cdt.managedbuild.tool.gnu.archiver.base.655662753" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.976060252" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
 <option id="gnu.cpp.compiler.option.include.paths.1744248936" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
 <listOptionValue builtIn="false" value="/usr/local/include/boost-1_36"/>
+<listOptionValue builtIn="false" value="/usr/local/include/vgp"/>
 </option>
 <option id="gnu.cpp.compiler.option.optimization.level.2105199216" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
 <option id="gnu.cpp.compiler.option.debugging.level.702983618" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" value="gnu.cpp.compiler.debugging.level.none" valueType="enumerated"/>
@@ -38,8 +38,8 @@
 </tool>
 <tool id="cdt.managedbuild.tool.gnu.c.compiler.base.765559665" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
 <option id="gnu.c.compiler.option.include.paths.94528898" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
 <listOptionValue builtIn="false" value="/usr/local/include/boost-1_36"/>
+<listOptionValue builtIn="false" value="/usr/local/include/vgp"/>
 </option>
 <option defaultValue="gnu.c.optimization.level.most" id="gnu.c.compiler.option.optimization.level.450554253" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
 <option id="gnu.c.compiler.option.debugging.level.2089202164" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.none" valueType="enumerated"/>
@@ -48,9 +48,7 @@
 <tool id="cdt.managedbuild.tool.gnu.c.linker.base.2046025589" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.base"/>
 <tool id="cdt.managedbuild.tool.gnu.cpp.linker.base.260750663" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.base"/>
 <tool id="cdt.managedbuild.tool.gnu.assembler.base.1224094407" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.base">
-<option id="gnu.both.asm.option.include.paths.2061628523" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
-</option>
+<option id="gnu.both.asm.option.include.paths.2061628523" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath"/>
 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.1913387889" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 </tool>
 </toolChain>
@@ -1756,8 +1754,8 @@
 <tool id="cdt.managedbuild.tool.gnu.archiver.base.404700731" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.371616392" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
 <option id="gnu.cpp.compiler.option.include.paths.1108268259" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
 <listOptionValue builtIn="false" value="/usr/local/include/boost-1_36"/>
+<listOptionValue builtIn="false" value="/usr/local/include/vgp"/>
 </option>
 <option id="gnu.cpp.compiler.option.preprocessor.def.852592328" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
 <listOptionValue builtIn="false" value="BOOST_MULTI_INDEX_ENABLE_SAFE_MODE"/>
@@ -1769,8 +1767,8 @@
 </tool>
 <tool id="cdt.managedbuild.tool.gnu.c.compiler.base.1522986096" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
 <option id="gnu.c.compiler.option.include.paths.661087647" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
 <listOptionValue builtIn="false" value="/usr/local/include/boost-1_36"/>
+<listOptionValue builtIn="false" value="/usr/local/include/vgp"/>
 </option>
 <option id="gnu.c.compiler.option.preprocessor.def.symbols.1913777851" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
 <listOptionValue builtIn="false" value="BOOST_MULTI_INDEX_ENABLE_SAFE_MODE"/>
@@ -1784,7 +1782,7 @@
 <tool id="cdt.managedbuild.tool.gnu.cpp.linker.base.1335401556" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.base"/>
 <tool id="cdt.managedbuild.tool.gnu.assembler.base.335869786" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.base">
 <option id="gnu.both.asm.option.include.paths.910332112" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="/usr/local/include/vgp"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.1623685501" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 </tool>
@@ -1826,7 +1824,7 @@
 <tool id="cdt.managedbuild.tool.gnu.cpp.linker.base.582690877" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.base"/>
 <tool id="cdt.managedbuild.tool.gnu.assembler.base.1707347648" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.base">
 <option id="gnu.both.asm.option.include.paths.1306885784" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vgp}&quot;"/>
+<listOptionValue builtIn="false" value="/usr/local/include/vgp"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.1985963117" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 </tool>
