--- a/branches/rebuild_for_python/.project
+++ b/branches/rebuild_for_python/.project
@@ -31,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/vgp_rebuild/Debug}</value>
+					<value>${workspace_loc:/vgp_rebuild/Release}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
