--- a/branches/rebuild_for_python/.cproject
+++ b/branches/rebuild_for_python/.cproject
@@ -33,6 +33,9 @@
 <listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp_rebuild"/>
 <listOptionValue builtIn="false" value="/usr/include/python3.1"/>
 </option>
+<option id="gnu.cpp.compiler.option.preprocessor.def.262176828" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
+<listOptionValue builtIn="false" value="_DEBUG"/>
+</option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.750466672" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 </tool>
 <tool id="cdt.managedbuild.tool.gnu.c.compiler.so.debug.1539972984" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.so.debug">
@@ -41,6 +44,9 @@
 <option id="gnu.c.compiler.option.include.paths.1655117554" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
 <listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp_rebuild"/>
 <listOptionValue builtIn="false" value="/usr/include/python3.1"/>
+</option>
+<option id="gnu.c.compiler.option.preprocessor.def.symbols.532069075" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+<listOptionValue builtIn="false" value="_DEBUG"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.509139878" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 </tool>
