--- a/branches/rebuild_for_python/.cproject
+++ b/branches/rebuild_for_python/.cproject
@@ -33,7 +33,7 @@
 <listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp_rebuild"/>
 <listOptionValue builtIn="false" value="/usr/include/python3.1"/>
 </option>
-<option id="gnu.cpp.compiler.option.preprocessor.def.262176828" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
+<option id="gnu.cpp.compiler.option.preprocessor.def.262176828" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
 <listOptionValue builtIn="false" value="_DEBUG"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.750466672" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
@@ -45,7 +45,7 @@
 <listOptionValue builtIn="false" value="/home/vsekhar/eclipsework/vgp_rebuild"/>
 <listOptionValue builtIn="false" value="/usr/include/python3.1"/>
 </option>
-<option id="gnu.c.compiler.option.preprocessor.def.symbols.532069075" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+<option id="gnu.c.compiler.option.preprocessor.def.symbols.532069075" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
 <listOptionValue builtIn="false" value="_DEBUG"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.509139878" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
@@ -494,6 +494,7 @@
 </scannerConfigBuildInfo>
 </storageModule>
 <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
+<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cconfiguration>
 <cconfiguration id="cdt.managedbuild.config.gnu.so.release.552243612">
 <storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.gnu.so.release.552243612" moduleId="org.eclipse.cdt.core.settings" name="Release">
@@ -972,6 +973,7 @@
 </scannerConfigBuildInfo>
 </storageModule>
 <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
+<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cconfiguration>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
