Renamed project back to vgp
git-svn-id: file:///home/vsekhar/vgp/vgp@324 cb3134f3-094e-0410-9174-ff1f5a1024ca

--- a/trunk/.project
+++ b/trunk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>vgp_rebuild</name>
+	<name>vgp</name>
 	<comment></comment>
 	<projects>
 	</projects>
